@@ -40,6 +40,7 @@
 || <a href=ref/pygame_mouse.html>mouse</a> || 
 <a href=ref/pygame_surfarray.html>surfarray</a> || 
 <a href=ref/pygame_time.html>time</a> || 
+<a href=ref/pygame_transform.html>transform</a> || 
 <a href=ref/pygame_version.html>version</a> ||<br>
 
 
@@ -302,6 +303,8 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_time.html#delay>pygame.time.delay</a> - delay for a number of milliseconds<br>
 <a href=ref/pygame_time.html#get_ticks>pygame.time.get_ticks</a> - milliseconds since startup<br>
 <a href=ref/pygame_time.html#set_timer>pygame.time.set_timer</a> - control timer events<br>
+<a href=ref/pygame_transform.html#rotate>pygame.transform.rotate</a> - rotate a Surface<br>
+<a href=ref/pygame_transform.html#scale>pygame.transform.scale</a> - scale a Surface to an arbitrary size<br>
 <a href=ref/pygame_version.html#ver>pygame.version.ver</a> - The current pygame version info<br>
 <!--ENDINDEX-->
 </ul>
